# chitra

./: .gitignore  Cargo.toml
apps/chitra/: Cargo.toml
apps/chitra/src/: main.rs
libs/clap_lib/: Cargo.toml
libs/clap_lib/src/: config.rs  lib.rs
libs/ctx_lib/: Cargo.toml
libs/ctx_lib/src/: chitra.rs  index.rs  index_tree.rs  lib.rs  treesittermanager.rs
libs/treesitter_lib/: Cargo.toml
libs/treesitter_lib/src/: ctxdir.rs  lib.rs
