[workspace]
resolver = "3"
members = ["apps/chitra", "libs/clap_lib", "libs/treesitter_lib"]


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
clap = {version = "4.6.0", features = ["derive"]}
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tokio = { version = "1.50.0", features = ["full"] }
directories = "6.0.0"
reqwest = "0.13.2"


#Library
clap_lib = { version = "0.1.0", path = "libs/clap_lib" }
treesitter_lib = { version = "0.1.0", path = "libs/treesitter_lib" }
