[package]
name = "chitra"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_lib = { version = "0.1.0", path = "../../libs/clap_lib" }
tracing.workspace = true
tracing-subscriber.workspace = true
