[package]
name = "chitra"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_lib.workspace = true
ctx_lib = { version = "0.1.0", path = "../../libs/ctx_lib" }
dotenvy = "0.15.7"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
treesitter_lib.workspace = true
